src/objects/Vehicle__c.object
<CustomObject>
    <fields>
        <fullName>ModelYear__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Vehicle Model Year 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle is Ã¢â‚¬ÂVehicle_ModelYearÃ¢â‚¬Å“</description>
        <label>Year Of Manufacture</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;1980</fullName>
                </value>
                <value>
                    <fullName>1981</fullName>
                </value>
                <value>
                    <fullName>1982</fullName>
                </value>
                <value>
                    <fullName>1983</fullName>
                </value>
                <value>
                    <fullName>1984</fullName>
                </value>
                <value>
                    <fullName>1985</fullName>
                </value>
                <value>
                    <fullName>1986</fullName>
                </value>
                <value>
                    <fullName>1987</fullName>
                </value>
                <value>
                    <fullName>1988</fullName>
                </value>
                <value>
                    <fullName>1989</fullName>
                </value>
                <value>
                    <fullName>1990</fullName>
                </value>
                <value>
                    <fullName>1991</fullName>
                </value>
                <value>
                    <fullName>1992</fullName>
                </value>
                <value>
                    <fullName>1993</fullName>
                </value>
                <value>
                    <fullName>1994</fullName>
                </value>
                <value>
                    <fullName>1995</fullName>
                </value>
                <value>
                    <fullName>1996</fullName>
                </value>
                <value>
                    <fullName>1997</fullName>
                </value>
                <value>
                    <fullName>1998</fullName>
                </value>
                <value>
                    <fullName>1999</fullName>
                </value>
                <value>
                    <fullName>2000</fullName>
                </value>
                <value>
                    <fullName>2001</fullName>
                </value>
                <value>
                    <fullName>2002</fullName>
                </value>
                <value>
                    <fullName>2003</fullName>
                </value>
                <value>
                    <fullName>2004</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model_Description__c</fullName>
        <label>Model Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>Vehicle model</description>
        <label>Model</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Class__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>A160</fullName>
                </value>
                <value>
                    <fullName>A180</fullName>
                </value>
                <value>
                    <fullName>A 180 Hatchback</fullName>
                </value>
                <value>
                    <fullName>A 200 Hatchback</fullName>
                </value>
                <value>
                    <fullName>A 260 Hatchback</fullName>
                </value>
                <value>
                    <fullName>B200 Dynamic</fullName>
                </value>
                <value>
                    <fullName>B200</fullName>
                </value>
                <value>
                    <fullName>B200 BlueEFFICIENCY</fullName>
                </value>
                <value>
                    <fullName>B200 Avantgarde</fullName>
                </value>
                <value>
                    <fullName>B200 Luxury</fullName>
                </value>
                <value>
                    <fullName>B200 Luxury  night special edition</fullName>
                </value>
                <value>
                    <fullName>C 200 Entry Elegance</fullName>
                </value>
                <value>
                    <fullName>C 280 Avantgarde</fullName>
                </value>
                <value>
                    <fullName>C230 Avantgarde</fullName>
                </value>
                <value>
                    <fullName>C200 CGI Avantgarde</fullName>
                </value>
                <value>
                    <fullName>C200 CGI Elegance</fullName>
                </value>
                <value>
                    <fullName>C280  Avantgarde</fullName>
                </value>
                <value>
                    <fullName>C200K Elegance</fullName>
                </value>
                <value>
                    <fullName>C200K Avantgarde</fullName>
                </value>
                <value>
                    <fullName>C200K Sport (not current series)</fullName>
                </value>
                <value>
                    <fullName>C260 Avantgarde</fullName>
                </value>
                <value>
                    <fullName>C200 Elegance</fullName>
                </value>
                <value>
                    <fullName>C240E  Elegance (not current series)</fullName>
                </value>
                <value>
                    <fullName>C240A Avantgarde (not current series)</fullName>
                </value>
                <value>
                    <fullName>C230 Elegance</fullName>
                </value>
                <value>
                    <fullName>C280</fullName>
                </value>
                <value>
                    <fullName>C200K</fullName>
                </value>
                <value>
                    <fullName>C240 (not current series)</fullName>
                </value>
                <value>
                    <fullName>C230</fullName>
                </value>
                <value>
                    <fullName>C260 CGI Avantgarde (CKD)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modification_Package__c</fullName>
        <label>Modification Package</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NationalType__c</fullName>
        <label>NationalType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>model</fullName>
                </value>
                <value>
                    <fullName>S-00</fullName>
                </value>
                <value>
                    <fullName>S-02</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Model__c</fullName>
        <label>National Model</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Used__c</fullName>
        <label>New Used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Used</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NextEmissionsCheckDate__c</fullName>
        <label>NextEmissionsCheckDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NextInspectionDate__c</fullName>
        <label>NextInspectionDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NextMileage__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Vehicle mileage of the next service 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle is Ã¢â‚¬ÂVehicle_NextMileageÃ¢â‚¬Å“</description>
        <label>NextMileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NextServiceDate__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Date of the next service of vehicle 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle is Ã¢â‚¬ÂNextServiceDateÃ¢â‚¬Å“</description>
        <label>NextServiceDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OptionCode__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: The vehicle&apos;s option code 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle is Ã¢â‚¬ÂVehicle_OptionCodeÃ¢â‚¬Å“</description>
        <label>OptionCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Vehicle_ID__c</fullName>
        <label>My Car ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power__c</fullName>
        <label>Power</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Model__c</fullName>
        <label>Product Model</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductionDate__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: The production date for vehicle 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle is Ã¢â‚¬ÂVehicle_ProductionDateÃ¢â‚¬Å“</description>
        <label>ProductionDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Month__c</fullName>
        <description>Month of invoice date</description>
        <label>Purchase Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Year__c</fullName>
        <description>Year of invoice date</description>
        <label>Purchase Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Engine_Model__c</fullName>
        <formula>LEFT( EngineNumber__c , 6)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engine Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Range__c</fullName>
        <label>Range</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recall__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Flag whatever the vehicle has been recalled 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle is Ã¢â‚¬ÂVehicle_RecallÃ¢â‚¬Å“</description>
        <label>Recall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RegistrationNo__c</fullName>
        <label>RegistrationNo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vehicles (Related Dealer)</relationshipLabel>
        <relationshipName>Vehicles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_From__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link the competitor vehicle to Account</description>
        <label>Related Customer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select the proper account.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Company, Person Account, Person Account Manual Merge, Person Account Soft Deleted</value>
            </filterItems>
            <infoMessage>Search and select account.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Other_Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retail_CreatedDate__c</fullName>
        <label>Retail CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retail_LastModifiedDate__c</fullName>
        <label>Retail LastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RidingCapacity__c</fullName>
        <label>Riding Capacity</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesType__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Vehicle is part of Retail or Fleet 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle is Ã¢â‚¬ÂVehicle_SalesTypeÃ¢â‚¬Å“</description>
        <label>SalesType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Fleet</fullName>
                </value>
                <value>
                    <fullName>Within Dealership</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Promotional Car</fullName>
                </value>
                <value>
                    <fullName>Dealer Standard Auditing Demo/Company Vehicle</fullName>
                </value>
                <value>
                    <fullName>Within MB Network/Within dealer group</fullName>
                </value>
                <value>
                    <fullName>Within MB Network-Without dealer group</fullName>
                </value>
                <value>
                    <fullName>Within the Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <description>describes what kind of vehicle it is.</description>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Car</fullName>
                </value>
                <value>
                    <fullName>Cycle</fullName>
                </value>
                <value>
                    <fullName>Heavy Commercial Vehicle</fullName>
                </value>
                <value>
                    <fullName>Light Commercial Vehicle</fullName>
                </value>
                <value>
                    <fullName>M/Cycle or Scooter</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Passenger Car</fullName>
                </value>
                <value>
                    <fullName>Trailer</fullName>
                </value>
                <value>
                    <fullName>Truck &amp; Bus</fullName>
                </value>
                <value>
                    <fullName>Vehicle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Source of the vehicle (domestic/import) 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle is Vehicle_Source</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                    <default>true</default>
                    <label>Domestic</label>
                </value>
                <value>
                    <fullName>Import</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Data_Source__c</fullName>
        <description>/*
Created by: Lio Huang
Used by: Lio Huang
Function: This field will not be in any page layout, read only for all profile as it is updated by integration.
Used in: Integration

Modify History
Modify By:
Modify Reason:
*/</description>
        <label>System Data Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSP_MDN__c</fullName>
        <label>TSP MDN</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timestamps__c</fullName>
        <label>Timestamps</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transmission__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: &apos;Manual&apos; or &apos;Automatic&apos; transmission 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle isÃ¢â‚¬ÂVehicle_TransmissionÃ¢â‚¬Å“</description>
        <label>Transmission</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>7-speed automatic transmission</fullName>
                </value>
                <value>
                    <fullName>4-speed automatic transmission</fullName>
                </value>
                <value>
                    <fullName>4-speed manual transmission</fullName>
                </value>
                <value>
                    <fullName>5-speed automatic transmission</fullName>
                </value>
                <value>
                    <fullName>5-speed manual transmission</fullName>
                </value>
                <value>
                    <fullName>CVT</fullName>
                </value>
                <value>
                    <fullName>Hand Automatic Transmission</fullName>
                </value>
                <value>
                    <fullName>Stepless automatic one hand transmission</fullName>
                </value>
                <value>
                    <fullName>6 speed</fullName>
                </value>
                <value>
                    <fullName>8 speed</fullName>
                </value>
                <value>
                    <fullName>9 speed</fullName>
                </value>
                <value>
                    <fullName>MB Powershift (Automatic)</fullName>
                </value>
                <value>
                    <fullName>Telligent Gear/Shift</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>SprintShift</fullName>
                </value>
                <value>
                    <fullName>Semi-automatic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trim__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Vehicle Interiors 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle is â€Vehicle_Trimâ€œ</description>
        <label>Trim</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_By_EP_Transactions__c</fullName>
        <description>The integration layer (EP) needs this field for defect handling and debugging:</description>
        <inlineHelpText>The integration layer (EP) needs this field for defect handling and debugging:</inlineHelpText>
        <label>Updated By EP Transactions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UsVIN__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Vehicle UsVIN 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/

Attribute in Data Dictionary object Vehicle is Ã¢â‚¬ÂVehicle_UsVINÃ¢â‚¬Å“</description>
        <externalId>true</externalId>
        <label>UsVIN</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Flag to indicate whether the VIN is valid 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: Mouse Liu
Modify Reason: Just change the field type to Picklist with LOV &apos;Unknown Yes No&apos;
*/

Attribute in Data Dictionary object Vehicle is Ã¢â‚¬ÂVehicle_ValidÃ¢â‚¬Å“</description>
        <label>Validity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VehicleAge__c</fullName>
        <formula>IF(OR(MONTH(today())-MONTH(FirstRegistrationDate__c)&gt;0,AND(MONTH(TODAY()) - MONTH(FirstRegistrationDate__c)&gt;=0,DAY(TODAY()) - DAY(FirstRegistrationDate__c)&gt;=0)), 
YEAR(TODAY()) - YEAR(FirstRegistrationDate__c), 
YEAR(TODAY()) - YEAR(FirstRegistrationDate__c)-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VehicleStatus__c</fullName>
        <label>VehicleStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current vehicle</fullName>
                </value>
                <value>
                    <fullName>Demo/courtesy vehicle</fullName>
                </value>
                <value>
                    <fullName>Invoiced vehicle</fullName>
                </value>
                <value>
                    <fullName>Vehicle to be ordered</fullName>
                </value>
                <value>
                    <fullName>Previous vehicle</fullName>
                </value>
                <value>
                    <fullName>Quoted Vehicle</fullName>
                </value>
                <value>
                    <fullName>Vehicle Required</fullName>
                </value>
                <value>
                    <fullName>Vehicle in stock</fullName>
                </value>
                <value>
                    <fullName>Part exchange vehicle</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Temporary scrap</fullName>
                </value>
                <value>
                    <fullName>Eternal scrap</fullName>
                </value>
                <value>
                    <fullName>Repossessed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehicle_Group__c</fullName>
        <label>Vehicle Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VAN</fullName>
                </value>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>CV</fullName>
                </value>
                <value>
                    <fullName>smart</fullName>
                </value>
                <value>
                    <fullName>SUV</fullName>
                </value>
                <value>
                    <fullName>NGCC</fullName>
                </value>
                <value>
                    <fullName>Dream Car</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehicle_Name__c</fullName>
        <label>Vehicle Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Role__c</fullName>
        <label>Vehicle Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehicle_Site__c</fullName>
        <label>Vehicle Site</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_End_Date__c</fullName>
        <label>Warranty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Start_Date__c</fullName>
        <description>To record the start date of warranty for the vehicle</description>
        <label>Warranty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Person Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vehicles (Account)</relationshipLabel>
        <relationshipName>Vehicles2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>last_update_changed_by__c</fullName>
        <label>Last update changed by</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_updated__c</fullName>
        <label>last updated</label>
        <type>DateTime</type>
    </fields>
    <label>Vehicle</label>
    <listViews>
        <fullName>All_Vehicles</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Vehicles</label>
        <language>en_US</language>
        <sharedTo>
            <group>MBK01Ehq</group>
            <group>MBK09Shq</group>
            <group>MBK11Whq</group>
            <group>MBK14Whq</group>
            <group>MBK17Whq</group>
            <group>MBK21Fhq</group>
            <group>MBK26Fhq</group>
            <group>MBK28Fhq</group>
            <group>MBK30Whq</group>
            <group>MBK31Shq</group>
            <group>MBK41Fhq</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_Created_Vehicles</fullName>
        <columns>UsVIN__c</columns>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Class__c</columns>
        <columns>Model__c</columns>
        <columns>EuroVIN__c</columns>
        <columns>CBU_CKD__c</columns>
        <columns>Colour__c</columns>
        <columns>CommissionNumber__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>New vehicles</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>V-{0000000000}</displayFormat>
        <label>Vehicle ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <recordTypes>
        <fullName>Competitor</fullName>
        <active>true</active>
        <description>Competitor Vehicle</description>
        <label>Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>MB</fullName>
        <active>true</active>
        <description>MB vehicle</description>
        <label>MB</label>
    </recordTypes>
    <recordTypes>
        <fullName>Self_Registered</fullName>
        <active>true</active>
        <label>Self Registered</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vehicle_Product</fullName>
        <active>true</active>
        <label>Vehicle Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vehicle_Soft_Deleted</fullName>
        <active>true</active>
        <description>Soft deleted vehicle</description>
        <label>Vehicle Soft Deleted</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Account_Link_Share__c</fullName>
        <label>Account Link Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Retail_Vehicle_Relationship_Share__c</fullName>
        <label>Retail Vehicle Relationship Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>CP_EURO_VIN_Lenght_Check</fullName>
        <active>true</active>
        <description>/* 
Created by: Mouse Liu 
Used by: US-CP-004 
Function: 
1. CP means Contact Portfolio 
2. EURO-VIN must be 17 or 18 characters. 
Used in: 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <errorConditionFormula>AND (
	NOT(ISNULL( EuroVIN__c )),
	NOT(ISBLANK( EuroVIN__c )),
	LEN( EuroVIN__c ) &lt;&gt; 17,
	LEN( EuroVIN__c ) &lt;&gt; 18,
$Profile.Name != &apos;IntegrationAPI&apos;,
 RecordType.DeveloperName = &apos;MB&apos;,
ISPICKVAL($User.Market__c, &apos;KR&apos;) 
)</errorConditionFormula>
        <errorDisplayField>EuroVIN__c</errorDisplayField>
        <errorMessage>EURO-VIN must be 17 or 18 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CP_US_VIN_Length_Check</fullName>
        <active>true</active>
        <description>/* 
Created by: Mouse Liu 
Used by: US-CP-004 
Function: 
1. CP means Contact Portfolio 
2. US-VIN must be 17 characters. 
Used in: 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(  UsVIN__c  ))&amp;&amp;
(LEN(  UsVIN__c  )  &lt;&gt; 17) &amp;&amp;  
(RecordType.DeveloperName = &apos;MB&apos;) &amp;&amp;
 UPPER( MD__c ) = &apos;JP&apos; &amp;&amp; 
($Profile.Name != &apos;IntegrationAPI&apos;))</errorConditionFormula>
        <errorDisplayField>UsVIN__c</errorDisplayField>
        <errorMessage>US VIN must be 17 digits when the record type is MB.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Euro_VIN_Invalid_Syntax</fullName>
        <active>true</active>
        <description>VIN is not allowed to have invalid syntax: $,%,^, ?, -, _, (, ), Space , *, @, punctuation, Chinese character.</description>
        <errorConditionFormula>AND(	NOT(ISNULL( EuroVIN__c )),
	NOT(ISBLANK( EuroVIN__c )),NOT(REGEX( EuroVIN__c , &quot;^[A-Za-z0-9]+$&quot;)), $Profile.Name != &apos;IntegrationAPI&apos;,  RecordType.DeveloperName = &apos;MB&apos;)</errorConditionFormula>
        <errorDisplayField>EuroVIN__c</errorDisplayField>
        <errorMessage>Euro VIN Has Invalid Syntax.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Start_End_Date</fullName>
        <active>true</active>
        <description>End date should not before Start date.</description>
        <errorConditionFormula>AND (
NOT(ISNULL( Related_From__c )),
AND (
NOT(ISNULL( Related_To__c )),
Related_From__c  &gt;  Related_To__c)) &amp;&amp;
($Profile.Name != &apos;IntegrationAPI&apos;) &amp;&amp; UPPER(MD__c) = &apos;JP&apos;</errorConditionFormula>
        <errorDisplayField>Related_To__c</errorDisplayField>
        <errorMessage>End date should not before Start date.</errorMessage>
    </validationRules>
</CustomObject>